# pysspm

./: .gitignore  README.md  build_docs.bat  build_docs.sh  pyproject.toml
docs/: index.md
pyspm/: __init__.py  cli.py  cli_config.py  cli_project.py  cli_stats.py  conf.py  config.py  metadata.py  project.py  stats.py
pysspm/: __init__.py  cli.py  cli_config.py  cli_init.py  cli_project.py  cli_stats.py  config.py  metadata.py  project.py  sspm.py  stats.py
pysspm/cli/: __init__.py  cli_config.py  cli_init.py  cli_project.py  cli_stats.py
pysspm/docs/: index.md
pysspm/lib/: __init__.py  config.py  metadata.py  project.py  project_status.py  stats.py
tests/: test_project_enums.py  test_pyspm.py  test_pysspm.py
