[tool.poetry]
name = "pyspm"
version = "0.1.0"
description = "Simple (scientific) project management tool."
authors = ["Aaron Ponti <aaron.ponti@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.18"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
tomli = "^2.0.1"

[tool.poetry.scripts]
spm = "pyspm.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
