[tool.poetry]
name = "pyspm"
version = "0.1.0"
description = "Simple (scientific) project management tool."
authors = ["Aaron Ponti <aaron.ponti@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
colorama = "^0.4.4"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
isort = "^5.10.1"
tomli = "^2.0.1"

[tool.poetry.scripts]
spm = "pyspm.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
