[tool.poetry]
name = "pysspm"
version = "0.2.2"
description = "Simple Scientific Project Manager."
authors = ["Aaron Ponti <aaron.ponti@bsse.ethz.ch>"]
license = "Apache-2.0"
repository = "https://github.com/aarpon/pysspm"
documentation = "https://github.com/aarpon/pysspm"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true
known_third_party = ["dateutil", "pandas", "pytest", "tabulate", "typer"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
colorama = "^0.4.6"
tabulate = "^0.9.0"
pandas = "^2.0.0"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
tomli = "^2.0.1"
pdoc3 = "^0.10.0"
pre-commit = "^3.7.1"

[tool.poetry.scripts]
sspm = "pysspm.sspm:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
